$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-12-23 [B] Fixed issue involving display of name field in the report to admin form {TranzNDance}
2008-12-23 [O] Modified code to record hit in a single ajax call instead of two in slideshow {Abbas}
2008-12-22 [O] Developed AJAX slideshow in new looks and new functionality {Sameera}
2008-12-20 [M] Removed the redundant slideshow.inc.php and its references {Abbas}
2008-12-19 [O] Moved pic_editor.php js to external file {SaWey}
2008-12-19 [C] In all style.css, commented out blinking important.gif, replaced with red bold {Paver}
2008-12-19 [O] Moved contact.php js to external file {SaWey}
2008-12-19 [B] Fixed [url] bbcodes not properly rendering {SaWey}
2008-12-19 [A] Added opening of rel="external" links in new window (core & documentation) {SaWey}
2008-12-19 [B] Fixed the bug http://forum.coppermine-gallery.net/index.php/topic,57065.msg279324.html#msg279324 {Abbas}
2008-12-19 [M] Removed the redundant display filename in filmstrip feature completely {Abbas}
2008-12-18 [B] Fixed db_ecard.php not deleting ecards {SaWey}
2008-12-18 [O] Replace inline js of util.php & db_ecard.php with external jQuery code {SaWey}
2008-12-18 [B] Fixed the merging of upload mechanisms array {Abbas}
2008-12-18 [M] Removed api folder {GauGau}
2008-12-18 [B] Fixed filmstrip work for odd number of thumbnail in filmstrip 
2008-12-18 [A] Added 6 new plugin hooks to be able to add custom CAPTCHA {SaWey}
2008-12-17 [O] Added code to disable the browse button if no album is selected on upload page {Abbas}
2008-12-17 [O] Added the disabled button to the swfupload button sprite image {Abbas}